# hr_onboarding

./: .gitignore  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
hr_onboarding/: hooks.py  modules.txt  setup.py
hr_onboarding/hr_onboarding/id_card/: api.py  employee_card.py
hr_onboarding/hr_onboarding/public/js/: employee_id_card.js
