[project]
name = "hr_onboarding"
authors = [
    { name = "RGM", email = "admin@rgm.vn"}
]
description = "Custom fields for HR onboarding mobile app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "segno>=1.6",
    "weasyprint>=62",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
